Adicionei exemplos de HTML, CSS e JavaScript.

--- a/3-javascript/02-introduction/exemplo04.html
+++ b/3-javascript/02-introduction/exemplo04.html
@@ -10,7 +10,7 @@
   <p>JavaScript consegue esconder elementos HTML ou revelar elementos HTML escondidos.</p>
   <button onclick="esconder()">Esconder</button>
   <button onclick="mostrar()">Mostrar</button>
-  <div><img src="../imagens/pic_bulboff.gif" alt="Imagem de uma lâmpada desligada"></div>
+  <div><img src="../../imagens/pic_bulboff.gif" alt="Imagem de uma lâmpada desligada"></div>
 
   <script>
     function esconder() {
