--- a/3-javascript/15-functions/exemplo02.html
+++ b/3-javascript/15-functions/exemplo02.html
@@ -9,7 +9,7 @@
 <body>
   <p>Digite a temperatura em Fahrenheit</p>
 
-<form action="#" method="get">
+<form>
 <input type="number" id="numero">
 <button onclick="teste()">Verificar</button>
 </form>
