--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
       flex: 33%;
       padding: 8px;
     }
+
+    ul {
+      list-style-type: disc;
+    }
   </style>
 </head>
 
@@ -53,6 +57,18 @@
             <li>Image Map</li>
             <li>Background Images</li>
             <li>The Picture Element</li>
+          </ul>
+        <li>Favicon</li>
+        <li>Page Title</li>
+        <li>Tables</li>
+          <ul>
+            <li>Borders</li>
+            <li>Sizes</li>
+            <li>Headers</li>
+            <li>Padding & Spacing</li>
+            <li>Colspan & Rowspan</li>
+            <li>Table Styling</li>
+            <li>Table Colgroup</li>
           </ul>
       </ol>
     </details>
@@ -122,6 +138,9 @@
             <li>Font Pairings</li>
             <li>Shorthand</li>
           </ul>
+        <li>Icons</li>
+        <li>Links</li>
+        <li>Lists</li>
       </ol>
     </details>
 
@@ -144,6 +163,8 @@
         <li>Data Types</li>
         <li>Functions</li>
         <li>Objects</li>
+        <li>Events</li>
+        <li>Strings</li>
       </ol>
     </details>
   </div>
