--- a/3-javascript/02-introduction/exemplo02.html
+++ b/3-javascript/02-introduction/exemplo02.html
@@ -10,17 +10,17 @@
   <p>JavaScript consegue modificar o valor de um atributo.</p>
   <button onclick="mudarImagemOn()">Ligar</button>
   
-  <img src="../imagens/pic_bulboff.gif" alt="Imagem de uma lâmpada desligada" id="imagem">
+  <img src="../../imagens/pic_bulboff.gif" alt="Imagem de uma lâmpada desligada" id="imagem">
 
   <button onclick="mudarImagemOff()">Desligar</button>
 
   <script>
     function mudarImagemOn() {
-      document.getElementById('imagem').src = '../imagens/pic_bulbon.gif';
+      document.getElementById('imagem').src = '../../imagens/pic_bulbon.gif';
     }
 
     function mudarImagemOff() {
-      document.getElementById('imagem').src = '../imagens/pic_bulboff.gif';
+      document.getElementById('imagem').src = '../../imagens/pic_bulboff.gif';
     }
   </script>
 
