--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           </ul>
         <li>Icons</li>
         <li>Links</li>
-        <li>Lists</li>
+        <li><mark>Lists</mark></li>
       </ol>
     </details>
 
