--- a/2-css/19-lists/exemplo01.html
+++ b/2-css/19-lists/exemplo01.html
@@ -9,11 +9,12 @@
   <style>
     ol,
     ul {
-      border: 1px solid blue;
+      background-color: #f1f1f1;
     }
 
     li {
-      border: 1px solid red;
+      background-color: powderblue;
+      padding: 8px;
     }
 
     .a {
