Adicionei exemplos de HTML, CSS e JavaScript.

--- a/3-javascript/19-string-methods/exemplo01.html
+++ b/3-javascript/19-string-methods/exemplo01.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <h1>Strings</h1>
+  <h1>Strings Methods</h1>
   <!-- <h2>Exemplo 1</h2>
   <h3>Length</h3>
   <p><mark>Rafael Santana</mark></p>
@@ -52,12 +52,14 @@
     let exe5a = console.log(carros.replace('Fusca', 'BMW'));
     let exe5b = console.log(nome.replace(/santana/i, 'Carvalho'))
     let exe5c = console.log(carros.replace(/Fusca/g, 'Opala'));
+    console.log(carros.replace(/fusca/gi, 'Prefiro Bicicleta'))
 
     // replace all
     let exe6a = console.log(text);
     text = text.replaceAll('Cats', 'Dogs');
     text = text.replaceAll('cats', 'dogs');
     let exe6b = console.log(text.replaceAll('Cats', 'Dogs'));
+
 
     // upperCase & lowerCase
     console.log(nome.toUpperCase());
