--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           </ul>
         <li>Favicon</li>
         <li>Page Title</li>
-        <li>Tables</li>
+        <li>Tables
           <ul>
             <li>Borders</li>
             <li>Sizes</li>
@@ -70,6 +70,9 @@
             <li>Table Styling</li>
             <li>Table Colgroup</li>
           </ul>
+        </li>
+        <li>Block & Inline</li>
+        <li>Classes</li>
       </ol>
     </details>
 
@@ -127,7 +130,7 @@
             <li>Spacing</li>
             <li>Text Shadow</li>
           </ul>
-        <li>Fonts</li>
+        <li>Fonts
           <ul>
             <li>Font Family</li>
             <li>Font Web Safe</li>
@@ -138,9 +141,20 @@
             <li>Font Pairings</li>
             <li>Shorthand</li>
           </ul>
+        </li>
         <li>Icons</li>
         <li>Links</li>
-        <li><mark>Lists</mark></li>
+        <li>Lists</li>
+        <li>Tables
+          <ul>
+            <li>Borders</li>
+            <li>Size</li>
+            <li>Alignment</li>
+            <li>Style</li>
+            <li>Responsive</li>
+          </ul>
+        </li>
+        <li><mark>Display</mark></li>
       </ol>
     </details>
 
@@ -165,6 +179,8 @@
         <li>Objects</li>
         <li>Events</li>
         <li>Strings</li>
+        <li>String Methods</li>
+        <li>String Search</li>
       </ol>
     </details>
   </div>
