--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <li>Responsive</li>
           </ul>
         </li>
-        <li><mark>Display</mark></li>
+        <li>Display</li>
       </ol>
     </details>
 
@@ -181,6 +181,7 @@
         <li>Strings</li>
         <li>String Methods</li>
         <li>String Search</li>
+        <li><mark>String Templates</mark></li>
       </ol>
     </details>
   </div>
