Adicionei exemplos de CSS.

--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
         </li>
         <li>Block & Inline</li>
         <li>Classes</li>
+        <li>Id</li>
+        <li>Iframes</li>
+        <li>JavaScript</li>
       </ol>
     </details>
 
@@ -155,6 +158,8 @@
           </ul>
         </li>
         <li>Display</li>
+        <li>Max-width</li>
+        <li>Position</li>
       </ol>
     </details>
 
@@ -181,7 +186,9 @@
         <li>Strings</li>
         <li>String Methods</li>
         <li>String Search</li>
-        <li><mark>String Templates</mark></li>
+        <li>String Templates</li>
+        <li>Numbers</li>
+        <li>BigInt</li>
       </ol>
     </details>
   </div>
