--- a/notas.html
+++ b/notas.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-  <h1>Notas</h1>  
+  <h1>Notas</h1> 
+
   <h2>HTML</h2>
   <h3>Capítulo 15: Links</h3>
   <p>By default, links will appear as follows in all browsers:</p>
@@ -26,6 +27,25 @@
     <li>a:hover</li>
     <li>a:active</li>
   </ul>
+
+  <hr>
+
+  <h2>JavaScript</h2>
+  <h3>Capítulo 23: BigInt</h3>
+  <p>BigInt is the second numeric data type in JavaScript (after Number).</p>
+
+  <p>With BigInt the total number of supported data types in JavaScript is 8:</p>
+
+  <ol>
+    <li>String</li>
+    <li>Number</li>
+    <li>Bigint</li>
+    <li>Boolean</li>
+    <li>Undefined</li>
+    <li>Null</li>
+    <li>Symbol</li>
+    <li>Object</li>
+  </ol>
 </body>
 
 </html>
