Adicionei exemplos de CSS.

--- a/index.html
+++ b/index.html
@@ -71,11 +71,14 @@
             <li>Table Colgroup</li>
           </ul>
         </li>
+        <li>Lists</li>
         <li>Block & Inline</li>
         <li>Classes</li>
         <li>Id</li>
         <li>Iframes</li>
         <li>JavaScript</li>
+        <li>File Paths</li>
+        <li>Head</li>
       </ol>
     </details>
 
@@ -160,6 +163,9 @@
         <li>Display</li>
         <li>Max-width</li>
         <li>Position</li>
+        <li>Z-index</li>
+        <li>Overflow</li>
+        <li>Float</li>
       </ol>
     </details>
 
@@ -189,6 +195,8 @@
         <li>String Templates</li>
         <li>Numbers</li>
         <li>BigInt</li>
+        <li>Number Methods</li>
+        <li>Number Properties</li>
       </ol>
     </details>
   </div>
