--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
         <li>Z-index</li>
         <li>Overflow</li>
         <li>Float</li>
+        <li>Inline-block</li>
       </ol>
     </details>
 
@@ -197,6 +198,8 @@
         <li>BigInt</li>
         <li>Number Methods</li>
         <li>Number Properties</li>
+        <li>Arrays</li>
+        <li>Array Methods</li>
       </ol>
     </details>
   </div>
