--- a/1-html/16-images/exemplo02.html
+++ b/1-html/16-images/exemplo02.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
+
 <head>
-<style>
-img {
-height: auto;
-width: 100%;
-}
-</style>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>HTML Images</title>
+  <link rel="stylesheet" href="../../estilos/1-html.css">
 </head>
+
 <body>
-
-<picture>
-<source media="(max-width:400px)" srcset="https://www.w3schools.com/html/img_girl.jpg">
-<source media="(max-width:800px)" srcset="https://www.w3schools.com/css/img_man.jpg">
-<img src="https://cdn.pixabay.com/photo/2017/08/01/08/29/woman-2563491_1280.jpg" alt="descrição">
-</picture>
-
+  <h1>Image Map</h1>
+  <picture>
+  <source media="(max-width:600px)" srcset="https://www.w3schools.com/html/img_girl.jpg">
+  <source media="(max-width:800px)" srcset="https://www.w3schools.com/css/img_man.jpg">
+  <img src="https://cdn.pixabay.com/photo/2017/08/01/08/29/woman-2563491_1280.jpg" alt="descrição">
+  </picture>
 </body>
+
 </html>
 
 
