--- a/1-html/20-block-inline/exemplo01.html
+++ b/1-html/20-block-inline/exemplo01.html
@@ -4,25 +4,19 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <style>
-    div {
-      background-color: powderblue;
-      margin: 16px 0;
-    }
-
-    span {
-      background-color: bisque;
-    }
-  </style>
+  <title>HTML Block & Inline</title>
+  <link rel="stylesheet" href="../../estilos/1-html.css">
 </head>
 
 <body>
-  <div>
+  <h1>Block & Inline</h1>
+  <div class="div-block-inline">
     Elemento com display block
   </div>
 
-  <span>Elemento com display inline</span>
+  <span class="span-block-inline">
+    Elemento com display inline
+  </span>
 </body>
 
 </html>
