--- a/2-css/15-text/exemplo01.html
+++ b/2-css/15-text/exemplo01.html
@@ -1,35 +1,36 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 
 <head>
-  <title>CSS</title>
-  <link rel="stylesheet" href="#">
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CSS Text</title>
+  <link rel="stylesheet" href="../../estilos/2-css.css">
   <style>
     h1 {
-    text-align: center;
-    margin-bottom: 40px;
-    text-shadow: 1px 1px 4px black;
+      text-align: center;
+      margin-bottom: 40px;
+      text-shadow: 1px 1px 4px black;
     }
 
     h2 {
-    color: green;
-    letter-spacing: 5px;
-    text-align: center;
-    text-decoration: underline overline;
-    text-decoration-color: coral;
-    text-decoration-style: wavy;
-    text-transform: uppercase;
+      color: green;
+      letter-spacing: 5px;
+      text-align: center;
+      text-decoration: underline overline;
+      text-decoration-color: coral;
+      text-decoration-style: wavy;
+      text-transform: uppercase;
     }
 
     p {
-    color: blue;
-    font-family: Tahoma, Verdana, sans-serif;
-    letter-spacing: 2px;
-    line-height: 1.4;
-    text-align: justify;
-    text-align-last: left;
-    text-indent: 50px;
+      color: blue;
+      font-family: Tahoma, Verdana, sans-serif;
+      letter-spacing: 2px;
+      line-height: 1.4;
+      text-align: justify;
+      text-align-last: left;
+      text-indent: 50px;
     }
   </style>
 </head>
@@ -42,6 +43,6 @@
   <p>This text is styled with some of the text formatting properties. The heading uses the text-align, text-transform, and color properties. The paragraph is indented, aligned, and the space between characters is specified. The underline is removed from this colored "Try it Yourself" link.</p>
   <p>This text is styled with some of the text formatting properties. The heading uses the text-align, text-transform, and color properties. The paragraph is indented, aligned, and the space between characters is specified. The underline is removed from this colored "Try it Yourself" link.</p>
   </div>
-
 </body>
+
 </html>
