--- a/2-css/18-links/exemplo01.html
+++ b/2-css/18-links/exemplo01.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Exemplo 01</title>
-
+  <title>CSS Links</title>
+  <link rel="stylesheet" href="../../estilos/2-css.css">
   <style>
     a:link {
       background-color: yellow;
