--- a/2-css/20-tables/exemplo01.html
+++ b/2-css/20-tables/exemplo01.html
@@ -2,15 +2,15 @@
 <html lang="pt-br">
 
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>CSS Tables</title>
+  <link rel="stylesheet" href="../../estilos/2-css.css">
   <style>
     table {
       border-collapse: collapse;
-      font-family:Verdana, Geneva, Tahoma, sans-serif;
       overflow-x: auto;
-      min-width: 700px;
+      width: 100%;
     }
     
     table,
@@ -45,7 +45,8 @@
 </head>
 
 <body>
-  <h1>Table com estilo</h1>
+  <h1>Tabelas</h1>
+
   <table>
     <caption>Exemplo de Tabela</caption>
     <tr>
@@ -104,7 +105,6 @@
       <td>France</td>
     </tr>
   </table>
-  
 </body>
 
 </html>
