--- a/2-css/21-display/exemplo01.html
+++ b/2-css/21-display/exemplo01.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Display</title>
+  <title>CSS Display</title>
+  <link rel="stylesheet" href="../../estilos/2-css.css">
   <style>
     div {
       border: 1px solid powderblue;
@@ -16,6 +17,8 @@
 </head>
 
 <body>
+  <h1>Display</h1>
+
   <div id="conteudo1">
     Conteúdo 1
     <button onclick="displayNone()">Display: None</button>
@@ -44,8 +47,6 @@
       document.getElementById('conteudo1').style.display = 'block';
       document.getElementById('conteudo2').style.visibility = 'visible';
     }
-
-
   </script>
 </body>
 
