--- a/index.html
+++ b/index.html
@@ -1,30 +1,16 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home</title>
-  <style>
-    div {
-      display: flex;
-    }
-
-    details {
-      border: 1px solid black;
-      flex: 33%;
-      padding: 8px;
-    }
-
-    ul {
-      list-style-type: disc;
-    }
-  </style>
+  <title>Página Inicial</title>
+  <link rel="stylesheet" href="estilos/principal.css">
 </head>
 
 <body>
-  <h1>Anotações</h1>
-  <div>
+  <h1>Sumário</h1>
+  <div class="principal">
     <details open>
       <summary>HTML</summary>
       <ol>
@@ -40,48 +26,64 @@
         <li>Formatting</li>
         <li>Quotations</li>
         <li>Comments</li>
-        <li>Colors</li>
+        <li>
+          Colors
           <ul>
             <li>RGB</li>
             <li>HEX</li>
             <li>HSL</li>
           </ul>
+        </li>
         <li>CSS</li>
-        <li>Links</li>
+        <li>
+          Links
           <ul>
             <li>Colors</li>
             <li>Bookmarks</li>
           </ul>
-        <li>Images</li>
+        </li>
+        <li>
+          Images
           <ul>
             <li>Image Map</li>
             <li>Background Images</li>
             <li>The Picture Element</li>
+            <li><a href="1-html/16-images/exemplo01.html" target="_blank">Exemplo 01</a> | <a href="1-html/16-images/exemplo02.html" target="_blank">Exemplo 02</a></li>
           </ul>
+        </li>
         <li>Favicon</li>
         <li>Page Title</li>
-        <li>Tables
+        <li>
+          Tables
           <ul>
             <li>Borders</li>
             <li>Sizes</li>
             <li>Headers</li>
             <li>Padding & Spacing</li>
             <li>Colspan & Rowspan</li>
-            <li>Table Styling</li>
-            <li>Table Colgroup</li>
+            <li>Styling</li>
+            <li>Colgroup</li>
+            <li><a href="1-html/19-tables/exemplo01.html" target="_blank">Exemplo 01</a></li>
           </ul>
         </li>
         <li>Lists</li>
-        <li>Block & Inline</li>
+        <li>
+          Block & Inline
+          <ul>
+            <li><a href="1-html/20-block-inline/exemplo01.html" target="_blank">Exemplo 1</a></li>
+          </ul>
+        </li>
         <li>Classes</li>
         <li>Id</li>
         <li>Iframes</li>
         <li>JavaScript</li>
         <li>File Paths</li>
         <li>Head</li>
+        <li>Layout</li>
       </ol>
     </details>
 
+    <!-- CSS -->
     <details open>
       <summary>CSS</summary>
       <ol>
@@ -91,43 +93,56 @@
         <li>Selectors</li>
         <li>How To</li>
         <li>Comments</li>
-        <li>Colors</li>
+        <li>
+          Colors
           <ul>
             <li>RGB</li>
             <li>HEX</li>
             <li>HSL</li>
           </ul>
-        <li>Backgrounds</li>
+        </li>
+        <li>
+          Backgrounds
           <ul>
             <li>Color</li>
             <li>Image</li>
             <li>Repeat</li>
             <li>Attachment</li>
             <li>Shorthand</li>
+            <li><a href="2-css/08-background/exemplo01.html" target="_blank">Exemplo 1</a> <a href="2-css/08-background/exemplo02.html" target="_blank">Exemplo 2</a></li>
           </ul>
-        <li>Borders</li>  
+        </li>
+        <li>
+          Borders  
           <ul>
             <li>Width</li>
             <li>Color</li>
             <li>Sides</li>
             <li>Shorthand</li>
             <li>Borders</li>
+            <li><a href="2-css/09-border/exemplo01.html" target="_blank">Exemplo 01</a></li>
           </ul>
-        <li>Margins</li>
+        </li>  
+        <li>
+          Margins
           <ul>
             <li>Margin Collapse</li>
           </ul>
+        </li>
         <li>Padding</li>
         <li>Height/Width</li>
         <li>Box Model</li>
-        <li>Outline</li>
+        <li>
+          Outline
           <ul>
             <li>Width</li>
             <li>Color</li>
             <li>Shorthand</li>
             <li>Offset</li>
           </ul>
-        <li>Text</li>
+        </li>
+        <li>
+          Text
           <ul>
             <li>Color</li>
             <li>Alignment</li>
@@ -135,8 +150,11 @@
             <li>Transformation</li>
             <li>Spacing</li>
             <li>Text Shadow</li>
+            <li><a href="2-css/15-text/exemplo01.html" target="_blank">Exemplo 01</a></li>
           </ul>
-        <li>Fonts
+        </li>
+        <li>
+          Fonts
           <ul>
             <li>Font Family</li>
             <li>Font Web Safe</li>
@@ -149,24 +167,67 @@
           </ul>
         </li>
         <li>Icons</li>
-        <li>Links</li>
-        <li>Lists</li>
-        <li>Tables
+        <li>
+          Links
+          <ul>
+            <li><a href="2-css/18-links/exemplo01.html" target="_blank">Exemplo 01</a></li>
+          </ul>
+        </li>
+        <li>
+          Lists
+          <ul>
+            <li><a href="2-css/19-lists/exemplo01.html" target="_blank">Exemplo 01</a></li>
+          </ul>
+        </li>
+        <li>
+          Tables
           <ul>
             <li>Borders</li>
             <li>Size</li>
             <li>Alignment</li>
             <li>Style</li>
             <li>Responsive</li>
+            <li><a href="2-css/20-tables/exemplo01.html" target="_blank">Exemplo 01</a></li>
           </ul>
         </li>
-        <li>Display</li>
+        <li>
+          Display
+          <ul>
+            <li><a href="2-css/21-display/exemplo01.html" target="_blank">Exemplo 01</a></li>
+          </ul>
+        </li>
         <li>Max-width</li>
-        <li>Position</li>
-        <li>Z-index</li>
-        <li>Overflow</li>
+        <li>
+          Position
+          <ul>
+            <li><a href="2-css/23-position/exemplo01.html" target="_blank">Exemplo 01</a> | <a href="2-css/23-position/exemplo02.html" target="_blank">Exemplo 02</a></li>
+          </ul>
+        </li>
+        <li>
+          Z-index
+          <ul>
+            <li><a href="2-css/24-z-index/exemplo01.html" target="_blank">Exemplo 01</a></li>
+          </ul>
+        </li>
+        <li>
+          Overflow
+          <ul>
+            <li><a href="2-css/25-overflow/exemplo01.html" target="_blank">Exemplo 01</a></li>
+          </ul>
+        </li>
         <li>Float</li>
-        <li>Inline-block</li>
+        <li>
+          Inline-block
+          <ul>
+            <li><a href="2-css/27-inline-block/exemplo01.html" target="_blank">Exemplo 01</a></li>
+          </ul>
+        </li>
+        <li>
+          Align
+          <ul>
+            <li><a href="2-css/28-align/exemplo01.html" target="_blank">Exemplo 01</a></li>
+          </ul>
+        </li>
       </ol>
     </details>
 
