--- a/1-html/16-images/exemplo01.html
+++ b/1-html/16-images/exemplo01.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Exemplo 01</title>
+  <title>HTML Images</title>
+  <link rel="stylesheet" href="../../estilos/1-html.css">
 </head>
+
 <body>
-  <h1>Images</h1>
+  <h1>Image Map</h1>
   <picture>
     <source media="(min-width: 800px)" srcset="https://www.w3schools.com/css/img_man.jpg">
     <source media="(min-width: 600px)" srcset="https://www.w3schools.com/html/img_girl.jpg">
     <img src="https://www.w3schools.com/css/img_tree.png" alt="Imagem de uma árvore com uma coruja num galho">
   </picture>
 </body>
+
 </html>
