--- a/2-css/08-background/exemplo01.html
+++ b/2-css/08-background/exemplo01.html
@@ -1,39 +1,18 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Exemplo 001 - Background</title>
-  <link rel="stylesheet" href="#">
-  <style>
-    div {
-    display: inline-block;
-    }
-
-    .exe01 {
-    background-color: green;
-    border: 1px solid black;
-    height: 200px;
-    margin: 8px;
-    opacity: 0.3;
-    width: 200px;
-    }
-
-    .exe02 {
-    background-color: rgba(0, 128, 0, 0.3);
-    border: 1px solid black;
-    height: 200px;
-    margin: 8px;
-    width: 200px;
-    }
-  </style>
+  <title>CSS Backgrounds</title>
+  <link rel="stylesheet" href="../../estilos/2-css.css">
 </head>
 
 <body>
-  <h1>Background-color</h1>
-  <div class="exe01">Transparência na cor e no conteúdo</div>
-  <div class="exe02">Transparência somente no conteúdo</div>
+  <h1>Background-Color</h1>
+
+  <div class="exe1-a">Transparência na cor, na borda e no conteúdo.</div>
+  <div class="exe1-b">Transparência somente na cor.</div>
 </body>
 
 </html>
