--- a/2-css/19-lists/exemplo01.html
+++ b/2-css/19-lists/exemplo01.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Exemplo 01</title>
-
+  <title>CSS Lists</title>
+  <link rel="stylesheet" href="../../estilos/2-css.css">
   <style>
     ol,
     ul {
@@ -44,7 +44,7 @@
 
 <body>
   <h1>Listas</h1>
-  <p>Example of unordered lists:</p>
+  <p>Exemplos de listas não-ordenadas:</p>
   <ul class="a">
     <li>Coffee</li>
     <li>Tea</li>
@@ -57,7 +57,7 @@
     <li>Coca Cola</li>
   </ul>
 
-  <p>Example of ordered lists:</p>
+  <p>Exemplos de listas ordenadas:</p>
   <ol class="c">
     <li>Coffee</li>
     <li>Tea</li>
