--- a/2-css/25-overflow/exemplo01.html
+++ b/2-css/25-overflow/exemplo01.html
@@ -2,9 +2,10 @@
 <html lang="pt-br">
 
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>CSS Overflow</title>
+  <link rel="stylesheet" href="../../estilos/2-css.css">
   <style>
     #overflowTest {
       background: #4CAF50;
@@ -12,7 +13,7 @@
       padding: 15px;
       width: 50%;
       height: 100px;
-      overflow: auto;
+      overflow: visible;
       border: 1px solid #ccc;
     }
   </style>
@@ -20,6 +21,14 @@
 
 <body>
   <h1>Overflow</h1>
+
+  <ul>
+    <li>Visible (default)</li>
+    <li>hidden</li>
+    <li>scroll</li>
+    <li>auto</li>
+  </ul>
+
   <div id="overflowTest">This text is really long and the height of its container is only 100 pixels. Therefore, a scrollbar is added to help the reader to scroll the content. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem.</div>
 </body>
 
