--- a/2-css/24-z-index/exemplo01.html
+++ b/2-css/24-z-index/exemplo01.html
@@ -5,19 +5,18 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CSS Z-index</title>
+  <link rel="stylesheet" href="../../estilos/2-css.css">
   <style>
     .container {
       position: relative;
       height: 300px;
-      margin: 80px auto;
-      width: 90%;
+      margin: 80px 0;
     }
 
     .div1 {
       position: absolute;
       top: 0;
       background-color: powderblue;
-      border: 2px solid blue;
       height: 200px;
       width: 90%;
       z-index: 0;
@@ -57,6 +56,7 @@
 
 <body>
   <h1>Z-index</h1>
+
   <div class="container">
     <div class="div1">Div 1</div>
     <div class="div2">Div 2</div>
