--- a/2-css/25-overflow/exemplo01.html
+++ b/2-css/25-overflow/exemplo01.html
@@ -23,7 +23,7 @@
   <h1>Overflow</h1>
 
   <ul>
-    <li>Visible (default)</li>
+    <li>visible (default)</li>
     <li>hidden</li>
     <li>scroll</li>
     <li>auto</li>
