--- a/2-css/28-align/exemplo01.html
+++ b/2-css/28-align/exemplo01.html
@@ -69,7 +69,7 @@
 
   <div class="c">
     <p>Essa div está com position: relative</p>
-    <div class="d">Div posicionada dentro de outra div com position: absolute</div>
+    <div class="d">Div com position: absolute posicionada dentro de outra div</div>
   </div>
 
   <div class="e">
