--- a/2-css/23-position/exemplo02.html
+++ b/2-css/23-position/exemplo02.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CSS Position</title>
+  <link rel="stylesheet" href="../../estilos/2-css.css">
   <style>
     .container {
       position: relative;
